--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/AllProducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/AllProducts.cshtml
@@ -13,7 +13,7 @@
             <li class="breadcrumb-item active">Tables</li>
         </ol>
         <div style="margin-bottom:10px">
-         
+
             <a href="/Products/Createproduct" class="btn btn-success" role="button">Add New product </a>
         </div>
         <div class="card mb-4">
@@ -30,7 +30,7 @@
                             <th>Product Description</th>
                             <th>Category</th>
                             <th></th>
-                          
+
 
                         </tr>
                     </thead>
@@ -46,21 +46,23 @@
                         </tr>
                     </tfoot>
                     <tbody>
-                        @foreach (var market in Model)
+                        @foreach (var product in Model)
                         {
 
                             <tr>
-                                <td>@market.productname</td>
-                                <td>@market.productBarcode</td>
-                                <td>@market.productDescription</td>
-                                <td>@market.productcategory</td>
-                             
+                                <td>@product.productname</td>
+                                <td>@product.productBarcode</td>
+                                <td>@product.productDescription</td>
+                                <td>@product.productcategory</td>
+
 
                                 <td>
-                                    <a href="/Products/Updateproduct/@market.productid" class="btn btn-primary" role="button">Update</a>
-                                    <a href="/Products/Deleteproduct/@market.productid" class="btn btn-danger" role="button">Delete</a>
+                                    <a href="/Products/Updateproduct/@product.productid" class="btn btn-primary" role="button">Update</a>
                                     
 
+                                    <button type="button" class="btn btn-danger   js-delete" onclick="confirm(this)" mid-data="@product.productid">
+                                        Delete
+                                    </button>
 
                                 </td>
 
@@ -74,3 +76,50 @@
         </div>
     </div>
 </main>
+
+
+
+@section scripts {
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+        function confirm(event) {
+            var btn = event;
+            let value = btn.getAttribute("mid-data");
+
+
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You won't be able to revert this!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url :"/Products/ConfirmDelete/"+value,
+                        method: "get",
+                        success: function () {
+                            $(btn).closest('tr').fadeOut();
+                        }
+                    })
+
+
+
+                    Swal.fire(
+                        'Deleted!',
+                        'Your file has been deleted.',
+                        'success'
+                    )
+                }
+            })
+        }
+
+
+    </script>
+
+}
+
