--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Createsupermarket.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Createsupermarket.cshtml
@@ -34,7 +34,7 @@
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="supermarketDescription" type="text" name="MarketDescription"  required/>
+                                <input class="form-control" id="supermarketDescription" type="text" name="MarketDescription" required />
                                 <label for="supermarketDescription"> SuperMarket Description</label>
                             </div>
 
@@ -43,17 +43,17 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber"  required/>
+                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" required />
                                         <label for="phonenumber">SuperMarket Phone Number</label>
                                     </div>
                                 </div>
 
                             </div>
 
-                  
+
 
                             <div class="mt-4 mb-0">
-                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
+                                <div class="d-grid"> <button type="submit" class="btn btn-primary" onclick="add(this)"> Add</button> </div>
                             </div>
                         </form>
 
@@ -66,3 +66,5 @@
         </div>
     </div>
 </main>
+
+
