--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@model IEnumerable<MarketPricingSystem.Models.Permissions>
+
+
 @{
     ViewBag.Title = "Createsupermarket";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
@@ -11,7 +13,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-7">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Add new SuperMarket</h3></div>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Add new Role</h3></div>
                     <div class="card-body">
 
 
@@ -32,75 +34,28 @@
 
 
                             <div class="row mb-3">
-                                <div class="col-md-6">
 
-                                    <input class="form-check-input" type="checkbox" id="perone" name="perone" value="1">
-                                    <label for="perone"> Crude supermarket</label><br>
 
-                                </div>
-                                <div class="col-md-6">
+                                @foreach (var permission in Model)
+                                {
 
-                                    <input class="form-check-input" type="checkbox" id="pertwo" name="pertwo" value="2">
-                                    <label for="pertwo"> Crude products</label><br>
+                                    <div class="col-md-6">
 
-                                </div>
+                                        <input class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+                                        <label for="@permission.PermissionName"> @permission.PermissionName</label><br>
+
+                                    </div>
+
+
+                                }
+
+
+
+
+
+
+
                             </div>    
-
-
-
-
-                            
-                          
-
-
-
-                            
-                            
-                            <div class="row mb-3">
-                                <div class="col-md-6">
-
-                                    <input class="form-check-input" type="checkbox" id="perthree" name="perthree" value="3">
-                                    <label for="perthree"> Crude users</label><br>
-
-                                </div>
-                                <div class="col-md-6">
-
-                                    <input class="form-check-input" type="checkbox" id="perfour" name="perfour" value="4">
-                                    <label for="perfour"> Crude roles</label><br>
-
-                                </div>
-
-                            </div>     
-                            
-                            
-                            
-                     
-                            
-                            <div class="row mb-3">
-                                <div class="col-md-6">
-
-                                    <input class="form-check-input" type="checkbox" id="perfive" name="perfive" value="5">
-                                    <label for="perfive"> Crude categories</label><br>
-
-                                </div>
-                                <div class="col-md-6">
-
-                                    <input class="form-check-input" type="checkbox" id="persix" name="persix" value="6">
-                                    <label for="persix"> Crude supermarket products</label><br>
-
-                                </div>
-
-                            </div>     
-                            
-                            
-                            
-                 
-
-
-                         
-
-
-
 
                             <div class="mt-4 mb-0">
                                 <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
