all users list and  adding delete confirm alert using sweet alert and ajax call

--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
@@ -41,8 +41,8 @@
 
                                     <div class="col-md-6">
 
-                                        <input class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
-                                        <label for="@permission.PermissionName"> @permission.PermissionName</label><br>
+                                        <input style=" cursor: pointer;" class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+                                        <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
 
                                     </div>
 
