--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
@@ -1,4 +1,4 @@
-﻿@model  IEnumerable<MarketPricingSystem.Models.Users>
+﻿@model  IEnumerable<MarketPricingSystem.ViewModel.Userdetails>
 @{
     ViewBag.Title = "Allsupermarkets";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
@@ -12,14 +12,14 @@
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
             <li class="breadcrumb-item active">Tables</li>
         </ol>
-        <div  style="margin-bottom:10px">
-         
+        <div style="margin-bottom:10px">
+
             <a href="/Others/Createuser" class="btn btn-success" role="button">Create New User </a>
         </div>
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
-              All Users
+                All Users
             </div>
             <div class="card-body">
                 <table id="datatablesSimple">
@@ -29,10 +29,11 @@
                             <th>phone number</th>
                             <th>Gmail</th>
                             <th>Password</th>
-                            
-                       
-                            <th></th>
-                          
+                            <th class="bg-warning">Role</th>
+
+
+                            <th class="bg-warning"></th>
+
 
                         </tr>
                     </thead>
@@ -42,9 +43,10 @@
                             <th>phone number</th>
                             <th>Gmail</th>
                             <th>Password</th>
+                            <th class="bg-warning">Role</th>
 
 
-                            <th></th>
+                            <th class="bg-warning"></th>
 
                         </tr>
                     </tfoot>
@@ -53,22 +55,21 @@
                         {
 
                             <tr>
-                                <td>@user.Name</td>
-                                <td>@user.PhoneNumber</td>
-                                <td>@user.Gmail</td>
-                                <td>@user.Password</td>
-                            
+                                <td>@user.username</td>
+                                <td>@user.userphonenumber</td>
+                                <td>@user.usergmail</td>
+                                <td>@user.userpassword</td>
+                                <td class="bg-warning">@user.rolename </td>
 
-                                <td>
+                                <td class="bg-warning">
 
                                     <a href="/Others/Rolepermissions" class="btn btn-primary" role="button">Edit</a>
 
+                                    
 
-                                    <a href="/Others/Userroles/@user.UserId" class="btn btn-success" role="button">Roles</a>
-
-                                    <a href="/Others/Deleteuser/@user.UserId" class="btn btn-danger" role="button">Delete</a>
-
-
+                                    <button type="button" class="btn btn-danger   js-delete" onclick="confirm(this)" uid-data="@user.userid">
+                                        Delete
+                                    </button>
 
                                 </td>
 
@@ -82,3 +83,49 @@
         </div>
     </div>
 </main>
+
+
+
+@section scripts {
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script>
+        function confirm(event) {
+            var btn = event;
+            let value = btn.getAttribute("uid-data");
+
+
+            Swal.fire({
+                title: 'Are you sure?',
+                text: "You won't be able to revert this!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url:"/Others/ConfirmDelete/"+value,
+                        method: "get",
+                        success: function () {
+                            $(btn).closest('tr').fadeOut();
+                        }
+                    })
+
+
+
+                    Swal.fire(
+                        'Deleted!',
+                        'Your file has been deleted.',
+                        'success'
+                    )
+                }
+            })
+        }
+
+
+    </script>
+
+}
