--- a/MarketPricingSystem/MarketPricingSystem/Views/Category/Updatecategory.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Category/Updatecategory.cshtml
@@ -18,8 +18,8 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="Categoryname" type="text"  name="Categoryname" />
-                                        <label for="Categoryname">@Model.CategoryName </label>
+                                        <input class="form-control" id="Categoryname" type="text"  name="Categoryname"  value="@Model.CategoryName" required/>
+                                        <label for="Categoryname"> category name </label>
                                     </div>
                                 </div>
                                 </div>
