updating user settings checking phone number

--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
@@ -17,13 +17,13 @@
             <div class="row py-2">
                 <div class="col-md-6">
                     <label for="name">Name</label>
-                    <input type="text" class="bg-light form-control" id="name" placeholder="@Model.Name" name="name" >
+                    <input type="text" class="bg-light form-control" id="name"  value="@Model.Name"  name="name" required >
                 </div>
 
 
                 <div class="col-md-6 pt-md-0 pt-3">
                     <label for="phone">Phone number</label>
-                    <input type="text" id="phone" class="bg-light form-control" placeholder="@Model.PhoneNumber" name="phone" >
+                    <input type="text" id="phone" class="bg-light form-control"  value="@Model.PhoneNumber" name="phone" required >
                 </div>
             </div>
 
@@ -32,11 +32,11 @@
             <div class="row py-2">
                 <div class="col-md-6">
                     <label for="email">Email Address</label>
-                    <input type="text" style="color:white" id="email" class="bg-black form-control" placeholder="@Model.Gmail" readonly value="@Model.Gmail" name="gmail">
+                    <input type="text" style="color:white" id="email" class="bg-opacity-75 form-control" placeholder="@Model.Gmail" readonly value="@Model.Gmail" name="gmail">
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3">
                     <label for="pass">Password</label>
-                    <input type="password" id="pass" class="bg-light form-control" value="wefwerwerwerasdasd" name="newpassword" >
+                    <input type="password" id="pass" class="bg-light form-control" value="wefwerwerwerasdasd" name="newpassword" required >
                 </div>
             </div>
 
