create new user done

--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
@@ -7,9 +7,9 @@
 
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">All Roles</h1>
+        <h1 class="mt-4">All Users</h1>
         <ol class="breadcrumb mb-4">
-            <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
+            <li class="breadcrumb-item"><a href="/Others/Createuser">Dashboard</a></li>
             <li class="breadcrumb-item active">Tables</li>
         </ol>
         <div style="margin-bottom:10px">
@@ -29,10 +29,10 @@
                             <th>phone number</th>
                             <th>Gmail</th>
                             <th>Password</th>
-                            <th class="bg-warning">Role</th>
+                            <th >Role</th>
 
 
-                            <th class="bg-warning"></th>
+                            <th></th>
 
 
                         </tr>
@@ -43,10 +43,10 @@
                             <th>phone number</th>
                             <th>Gmail</th>
                             <th>Password</th>
-                            <th class="bg-warning">Role</th>
+                            <th >Role</th>
 
 
-                            <th class="bg-warning"></th>
+                            <th></th>
 
                         </tr>
                     </tfoot>
@@ -59,9 +59,9 @@
                                 <td>@user.userphonenumber</td>
                                 <td>@user.usergmail</td>
                                 <td>@user.userpassword</td>
-                                <td class="bg-warning">@user.rolename </td>
+                                <td >@user.rolename </td>
 
-                                <td class="bg-warning">
+                                <td >
 
                                     <a href="/Others/Rolepermissions" class="btn btn-primary" role="button">Edit</a>
 
