--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Createuser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Createuser.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@model  IEnumerable<MarketPricingSystem.Models.Roles>
 @{
-    ViewBag.Title = "Createsupermarket";
+    ViewBag.Title = "Create User";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
@@ -11,111 +11,82 @@
         <div class="row justify-content-center">
             <div class="col-lg-7">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Add new SuperMarket</h3></div>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Add new User</h3></div>
                     <div class="card-body">
 
 
-                        <form method="post" action="/Roles/ConfirmCreate">
+                        <form method="post" action="/Others/Confirmcreate">
 
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="Rolename" type="text" name="Rolename" required />
-                                        <label for="Rolename"> Role Name</label>
+                                        <input class="form-control" id="username" type="text" name="username" required />
+                                        <label for="username"> User Name</label>
                                     </div>
                                 </div>
 
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input class="form-control" id="phonenumber" type="text" name="phonenumber" required />
+                                        <label for="phonenumber"> User phonenumber</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-floating mb-3">
+                                <input class="form-control"  type="email" id="gmail"  name="gmail" required />
+                                <label for="gmail"> User gmail</label>
                             </div>
 
 
 
-
-
                             <div class="row mb-3">
                                 <div class="col-md-6">
-                                  
-                                        <input class="form-check-input" type="checkbox" id="perone" name="perone" value="1">
-                                        <label for="perone"> Crude supermarket</label><br>
-                                
+                                    <div class="form-floating mb-3 mb-md-0">
+                                        <input class="form-control" id="password"  type="password" name="password" onchange="able()" required />
+                                        <label for="password">password</label>
+                                    </div>
+                                    <span id="c1" style="color:red">Password does not match !</span>
                                 </div>
 
-                            </div>    
 
-
-
-
-                            
-                            <div class="row mb-3">
                                 <div class="col-md-6">
-                                
-                                        <input class="form-check-input" type="checkbox" id="pertwo" name="pertwo" value="2">
-                                        <label for="pertwo"> Crude products</label><br>
-                                
-                                </div>
+                                    <div class="form-floating mb-3 mb-md-0">
+                                        <input class="form-control" id="confirmpassword" onchange="able()" type="password" required />
+                                        <label for="confirmpassword">Confirm password</label>
 
-                            </div>    
-                            
-
-
-
-
-                            
-                            
-                            <div class="row mb-3">
-                                <div class="col-md-6">
-                                  
-                                        <input class="form-check-input" type="checkbox" id="perthree" name="perthree" value="3">
-                                        <label for="perthree"> Crude users</label><br>
-                                
-                                </div>
-
-                            </div>     
-                            
-                            
-                            
-                            
-                            <div class="row mb-3">
-                                <div class="col-md-6">
-                                    
-                                        <input class="form-check-input" type="checkbox" id="perfour" name="perfour" value="4">
-                                        <label for="perfour"> Crude roles</label><br>
-                                   
-                                </div>
-
-                            </div>      
-                            
-                            
-                            
-                            <div class="row mb-3">
-                                <div class="col-md-6">
-                                  
-                                        <input class="form-check-input" type="checkbox" id="perfive" name="perfive" value="5">
-                                        <label for="perfive"> Crude categories</label><br>
-                                    
-                                </div>
-
-                            </div>     
-                            
-                            
-                            
-                            <div class="row mb-3">
-                                <div class="col-md-6">
-                                    
-                                        <input class="form-check-input" type="checkbox" id="persix" name="persix" value="6">
-                                        <label for="persix"> Crude supermarket products</label><br>
-                                   
+                                    </div>
+                                    <span id="c2" style="color:red"  >Password does not match !</span>
                                 </div>
 
                             </div>
 
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label for="role" style="opacity: 0.5">Role</label>
 
-                         
+                                        <select id="role" class="form-control" name="roleid">
+
+                                            @foreach (var role in Model)
+                                            {
+                                                <option value="@role.RoleId">@role.RoleName</option>
+                                            }
 
 
+
+
+                                        </select>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
 
 
                             <div class="mt-4 mb-0">
-                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
+                                <div class="d-grid"> <button id="btn" type="submit" class="btn btn-primary" onclick="validate()"> Add</button> </div>
                             </div>
                         </form>
 
@@ -128,3 +99,64 @@
         </div>
     </div>
 </main>
+
+
+
+@section scripts
+    {
+
+    <script>
+        const c11 = document.getElementById("c1");
+        const c22 = document.getElementById("c2");
+        c1.style.display = "none";
+        c2.style.display = "none";
+
+
+        function validate() {
+            var password = document.getElementById("password").value;
+            var confirmpassword = document.getElementById("confirmpassword").value;
+
+            const button = document.getElementById("btn");
+
+
+            const c1 = document.getElementById("c1");
+            const c2 = document.getElementById("c2");
+
+
+
+
+
+
+
+            var v = password === confirmpassword;
+            if (!v) {
+
+                c1.style.display = "block";
+                c2.style.display = "block";
+            }
+            button.disabled = !v;
+        }
+
+        function able() {
+            const c11 = document.getElementById("c1");
+            const c22 = document.getElementById("c2");
+            c1.style.display = "none";
+            c2.style.display = "none";
+            const button = document.getElementById("btn");
+            button.disabled = false;
+
+        }
+
+
+
+
+
+    </script>
+
+
+
+
+
+
+
+}
