--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Createsupermarket.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Createsupermarket.cshtml
@@ -53,7 +53,7 @@
 
 
                             <div class="mt-4 mb-0">
-                                <div class="d-grid"> <button type="submit" class="btn btn-primary" onclick="add(this)"> Add</button> </div>
+                                <div class="d-grid"> <button type="submit" class="btn btn-primary" > Add</button> </div>
                             </div>
                         </form>
 
