finishing user functionalities

--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
@@ -63,7 +63,7 @@
 
                                 <td >
 
-                                    <a href="/Others/Rolepermissions" class="btn btn-primary" role="button">Edit</a>
+                                    <a href="/Others/Updateuser/@user.userid" class="btn btn-primary" role="button">Update</a>
 
                                     
 
