--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Updateuser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Updateuser.cshtml
@@ -1,4 +1,4 @@
-﻿@model  IEnumerable<MarketPricingSystem.Models.Roles>
+﻿@model   MarketPricingSystem.ViewModel.Userandroles
 @{
     ViewBag.Title = "Create User";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
@@ -15,26 +15,26 @@
                     <div class="card-body">
 
 
-                        <form method="post" action="/Others/Confirmcreate">
-
+                        <form method="post" action="/Others/Confirmupdate">
+                            
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="username" type="text" name="username" required />
+                                        <input class="form-control" id="username" type="text" name="username" value="@Model.User.Name" required />
                                         <label for="username"> User Name</label>
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input class="form-control" id="phonenumber" type="text" name="phonenumber" required />
+                                        <input class="form-control" id="phonenumber" type="text" name="phonenumber" value="@Model.User.PhoneNumber" required />
                                         <label for="phonenumber"> User phonenumber</label>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control"  type="email" id="gmail"  name="gmail" required />
+                                <input class="bg-opacity-75 form-control" type="email" id="gmail"     value="@Model.User.Gmail"  readonly  />
                                 <label for="gmail"> User gmail</label>
                             </div>
 
@@ -43,7 +43,7 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="password"  type="password" name="password" onclick="able()" required />
+                                        <input class="form-control" id="password" type="password" name="password" value="@Model.User.Password" onclick="able()" required />
                                         <label for="password">password</label>
                                     </div>
                                     <span id="c1" style="color:red">Password does not match !</span>
@@ -52,14 +52,16 @@
 
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="confirmpassword" onchange="onclick()" type="password" required />
+                                        <input class="form-control" id="confirmpassword" onchange="onclick()" value="@Model.User.Password" type="password" required />
                                         <label for="confirmpassword">Confirm password</label>
 
                                     </div>
-                                    <span id="c2" style="color:red"  >Password does not match !</span>
+                                    <span id="c2" style="color:red">Password does not match !</span>
                                 </div>
 
                             </div>
+
+                            <input type="hidden" name="userid" value="@Model.User.UserId"/>
 
                             <div class="row mb-3">
                                 <div class="col-md-6">
@@ -68,7 +70,7 @@
 
                                         <select id="role" class="form-control" name="roleid">
 
-                                            @foreach (var role in Model)
+                                            @foreach (var role in Model.Rolelist)
                                             {
                                                 <option value="@role.RoleId">@role.RoleName</option>
                                             }
@@ -86,7 +88,7 @@
 
 
                             <div class="mt-4 mb-0">
-                                <div class="d-grid"> <button id="btn" type="submit" class="btn btn-primary" onclick="validate()"> Add</button> </div>
+                                <div class="d-grid"> <button id="btn" type="submit" class="btn btn-primary" onclick="validate()"> update</button> </div>
                             </div>
                         </form>
 
