--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
@@ -32,7 +32,7 @@
             <div class="row py-2">
                 <div class="col-md-6">
                     <label for="email">Email Address</label>
-                    <input type="text" style="color:white" id="email" class="bg-opacity-75 form-control" placeholder="@Model.Gmail" readonly value="@Model.Gmail" name="gmail">
+                    <input type="text" id="email" class="bg-opacity-75 form-control" placeholder="@Model.Gmail" readonly value="@Model.Gmail" name="gmail">
                 </div>
                 <div class="col-md-6 pt-md-0 pt-3">
                     <label for="pass">Password</label>
