--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
@@ -58,7 +58,7 @@
                                 <td>@user.username</td>
                                 <td>@user.userphonenumber</td>
                                 <td>@user.usergmail</td>
-                                <td>@user.userpassword</td>
+                                <td> <input class="form-control" type="password" readonly style=" border:solid 0px; background-color:white" value="@user.userpassword"/> </td>
                                 <td >@user.rolename </td>
 
                                 <td >
