--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
@@ -17,36 +17,50 @@
             <div class="row py-2">
                 <div class="col-md-6">
                     <label for="name">Name</label>
-                    <input type="text" class="bg-light form-control" id="name"  value="@Model.Name"  name="name" required >
+                    <input type="text" class="bg-light form-control" id="name" value="@Model.Name" name="name" required>
                 </div>
 
 
                 <div class="col-md-6 pt-md-0 pt-3">
                     <label for="phone">Phone number</label>
-                    <input type="text" id="phone" class="bg-light form-control"  value="@Model.PhoneNumber" name="phone" required >
+                    <input type="text" id="phone" class="bg-light form-control" value="@Model.PhoneNumber" name="phone" required>
                 </div>
             </div>
 
 
 
             <div class="row py-2">
-                <div class="col-md-6">
+                <div class="col-md-11">
                     <label for="email">Email Address</label>
-                    <input type="text" id="email" class="bg-opacity-75 form-control" placeholder="@Model.Gmail" readonly value="@Model.Gmail" name="gmail">
-                </div>
-                <div class="col-md-6 pt-md-0 pt-3">
-                    <label for="pass">Password</label>
-                    <input type="password" id="pass" class="bg-light form-control" value="wefwerwerwerasdasd" name="newpassword" required >
+                    <input type="text" id="email" class="bg-opacity-75 form-control" placeholder="@Model.Gmail" readonly value="@Model.Gmail">
                 </div>
             </div>
 
 
+            <div class="row py-2">
+                <div class="col-md-6 pt-md-0 pt-3">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" class="bg-light form-control" value="@Model.Password" onclick="able()" name="newpassword" required>
+                    <span id="c1" style="color:red">Password does not match !</span>
+                </div>
 
 
+                <div class="col-md-6 pt-md-0 pt-3">
+                    <label for="confirmpassword">Password</label>
+                    <input type="password" id="confirmpassword" class="bg-light form-control" value="@Model.Password" onclick="able()" required>
+                    <span id="c2" style="color:red">Password does not match !</span>
+                </div>
+
+
+            </div>
+
+
+
+            <input type="hidden" value="@Model.UserId" name="userid"/>
 
             <div class="py-3 pb-4 border-bottom">
-                <button class="btn btn-primary mr-3" type="submit">update new settings</button>
-                <a  class="btn btn-success"  href="/Users/Dashboard" > Back </a>
+                <button id="btn" class="btn btn-primary mr-3" onclick="validate()" type="submit">update new settings</button>
+                <a class="btn btn-success" href="/Users/Dashboard"> Back </a>
             </div>
 
         </div>
@@ -55,7 +69,69 @@
 
 
 @section Styles{
-    
-     <link rel="stylesheet"  href="~/Content/Settings.css"/>
-    
-    }  
+
+    <link rel="stylesheet" href="~/Content/Settings.css" />
+
+}
+
+
+
+
+@section scripts
+    {
+
+    <script>
+        const c11 = document.getElementById("c1");
+        const c22 = document.getElementById("c2");
+        c1.style.display = "none";
+        c2.style.display = "none";
+
+
+        function validate() {
+            var password = document.getElementById("password").value;
+            var confirmpassword = document.getElementById("confirmpassword").value;
+
+            const button = document.getElementById("btn");
+
+
+            const c1 = document.getElementById("c1");
+            const c2 = document.getElementById("c2");
+
+
+
+
+
+
+
+            var v = password === confirmpassword;
+            if (!v) {
+
+                c1.style.display = "block";
+                c2.style.display = "block";
+            }
+            button.disabled = !v;
+        }
+
+        function able() {
+            const c11 = document.getElementById("c1");
+            const c22 = document.getElementById("c2");
+            c1.style.display = "none";
+            c2.style.display = "none";
+            const button = document.getElementById("btn");
+            button.disabled = false;
+
+        }
+
+
+
+
+
+    </script>
+
+
+
+
+
+
+
+}
