add priced product to supermarket done

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/GetCheapestproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/GetCheapestproduct.cshtml
@@ -18,7 +18,7 @@
 
                        <h1> @cheapproduct.supermarketname </h1>
                        <h1> @cheapproduct.productname </h1>
-                       <h1>@cheapproduct.productprice <span>$</span></h1>
+                       <h1>@cheapproduct.productprice <span style="margin-left:10px">LB</span></h1>
 
 
                    </div>
