--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
@@ -28,7 +28,7 @@
                 <td>@market.productname</td>
                 <td>@market.productBarcode</td>
                 <td>@market.productDescription</td>
-                <td>@market.productprice<span>$</span></td>
+                <td>@market.productprice <span style="margin-left:10px">LB</span></td>
                 <td>@market.productcategory</td>
              
               
