--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
@@ -78,7 +78,7 @@
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
                             Categories
                         </a>
-                        <a class="nav-link" href="tables.html">
+                        <a class="nav-link" href="/Supermarketproducts/Allsupermarkets">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-money-bill-trend-up"></i> </div>
                             Super Market Products
                         </a>
