doing cards for cheapest and expensive products

--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="~/Content/style.css">
 </head>
-<body>
+<body style="padding-bottom:0px" >
     <header class="header">
 
         <a href="#" class="logo"> <i class="fa-solid fa-shop"></i> Ghobairy Market Pricing </a>
@@ -36,7 +36,7 @@
 
     <!-- footer section starts  -->
 
-    <section class="footer">
+    <section class="footer" style="margin-bottom:0px">
 
         <div class="box-container">
 
