--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Createuser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Createuser.cshtml
@@ -52,7 +52,7 @@
 
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="confirmpassword" onchange="onclick()" type="password" required />
+                                        <input class="form-control" id="confirmpassword"  onclick="able()" type="password" required />
                                         <label for="confirmpassword">Confirm password</label>
 
                                     </div>
