--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
@@ -27,7 +27,7 @@
                         <tr>
                             <th>Name</th>
                             <th>phone number</th>
-                            <th>Gmail</th>
+                            <th>Email</th>
                            
                             <th >Role</th>
 
@@ -41,7 +41,7 @@
                         <tr>
                             <th>Name</th>
                             <th>phone number</th>
-                            <th>Gmail</th>
+                            <th>Email</th>
                            
                             <th >Role</th>
 
