--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Updateuser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Updateuser.cshtml
@@ -35,7 +35,7 @@
 
                             <div class="form-floating mb-3">
                                 <input class="bg-opacity-75 form-control" type="email" id="gmail"     value="@Model.User.Gmail"  readonly  />
-                                <label for="gmail"> User gmail</label>
+                                <label for="gmail"> User Email</label>
                             </div>
 
 
