Adding validations and form error place for all functions

--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Allusers.cshtml
@@ -10,7 +10,7 @@
         <h1 class="mt-4">All Users</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Others/Createuser">Dashboard</a></li>
-            <li class="breadcrumb-item active">Tables</li>
+            <li class="breadcrumb-item active">Users</li>
         </ol>
         <div style="margin-bottom:10px">
 
