--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/AllRoles.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/AllRoles.cshtml
@@ -10,7 +10,7 @@
         <h1 class="mt-4">All Roles</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
-            <li class="breadcrumb-item active">Tables</li>
+            <li class="breadcrumb-item active">roles</li>
         </ol>
         <div  style="margin-bottom:10px">
          
@@ -58,7 +58,7 @@
                                     <a href="/Roles/Rolepermissions/@market.RoleId" class="btn btn-primary" role="button">permissions</a>
 
 
-                                    <a href="/Roles/Updaterole/@market.RoleId" class="btn btn-warning" role="button">Edit permission</a>
+                                    <a href="/Roles/Updaterole/@market.RoleId" class="btn btn-warning" role="button">Edit permissions</a>
 
                                 </td>
 
