--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Createrole.cshtml
@@ -18,7 +18,7 @@
 
 
                         <form method="post" action="/Roles/ConfirmCreate">
-
+                            <h6 style="color:red;opacity:0.5">@TempData["Message1"]</h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
@@ -55,7 +55,7 @@
 
 
 
-                            </div>    
+                            </div>
 
                             <div class="mt-4 mb-0">
                                 <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
