--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Supermarketproducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Supermarketproducts.cshtml
@@ -8,8 +8,8 @@
     <div class="container-fluid px-4">
         <h1 class="mt-4">Products</h1>
         <ol class="breadcrumb mb-4">
-            <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
-            <li class="breadcrumb-item active">Tables</li>
+            <li class="breadcrumb-item"><a href="/Supermarketproducts/Allsupermarkets">Supermarkets</a></li>
+            <li class="breadcrumb-item active">products</li>
         </ol>
         <div style="margin-bottom:10px">
 
