--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Settings.cshtml
@@ -15,6 +15,7 @@
 
 
             <div class="row py-2">
+                <h6 style="color:red;opacity:0.5;margin-left:50%">@TempData["Message1"]  </h6>
                 <div class="col-md-6">
                     <label for="name">Name</label>
                     <input type="text" class="bg-light form-control" id="name" value="@Model.Name" name="name" required>
@@ -22,6 +23,7 @@
 
 
                 <div class="col-md-6 pt-md-0 pt-3">
+
                     <label for="phone">Phone number</label>
                     <input type="text" id="phone" class="bg-light form-control" value="@Model.PhoneNumber" name="phone" required>
                 </div>
