--- a/MarketPricingSystem/MarketPricingSystem/Views/Category/AllCategories.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Category/AllCategories.cshtml
@@ -10,7 +10,7 @@
         <h1 class="mt-4">All Categories</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
-            <li class="breadcrumb-item active">Tables</li>
+            <li class="breadcrumb-item active">categories</li>
         </ol>
         <div style="margin-bottom:10px">
 
