--- a/MarketPricingSystem/MarketPricingSystem/Views/Category/Createcategory.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Category/Createcategory.cshtml
@@ -16,7 +16,7 @@
 
 
                         <form method="post" action="/Category/ConfirmCreate">
-
+                            <h6 style="color:red;opacity:0.5">@TempData["Message1"]</h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
