--- a/MarketPricingSystem/MarketPricingSystem/Views/Category/Updatecategory.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Category/Updatecategory.cshtml
@@ -14,16 +14,16 @@
 
 
                         <form method="post" action="/Category/Confirmupdate">
-
+                            <h6 style="color:red;opacity:0.5">@TempData["Message1"]</h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="Categoryname" type="text"  name="Categoryname"  value="@Model.CategoryName" required/>
+                                        <input class="form-control" id="Categoryname" type="text" name="Categoryname" value="@Model.CategoryName" required />
                                         <label for="Categoryname"> category name </label>
                                     </div>
                                 </div>
-                                </div>
-                              
+                            </div>
+
 
                             <input type="hidden" value="@Model.CategoryId" name="Categoryid" />
 
