--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Updateuser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Updateuser.cshtml
@@ -16,7 +16,7 @@
 
 
                         <form method="post" action="/Others/Confirmupdate">
-                            
+                            <h6 style="color:red;opacity:0.5;margin-left:53%">@TempData["Message1"]  </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
@@ -34,7 +34,7 @@
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="bg-opacity-75 form-control" type="email" id="gmail"     value="@Model.User.Gmail"  readonly  />
+                                <input class="bg-opacity-75 form-control" type="email" id="gmail" value="@Model.User.Gmail" readonly />
                                 <label for="gmail"> User Email</label>
                             </div>
 
@@ -52,7 +52,7 @@
 
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="confirmpassword"  onclick="able()"  type="password"  onchange="able()" />
+                                        <input class="form-control" id="confirmpassword" onclick="able()" type="password" onchange="able()" />
                                         <label for="confirmpassword">Confirm new password</label>
 
                                     </div>
@@ -61,8 +61,9 @@
 
                             </div>
 
-                            <input type="hidden" name="userid" value="@Model.User.UserId"/>
+                            <input type="hidden" name="userid" value="@Model.User.UserId" />
 
+                            <h6 style="color:red;opacity:0.5;">@TempData["Message3"]  </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -70,9 +71,20 @@
 
                                         <select id="role" class="form-control" name="roleid">
 
+
+
                                             @foreach (var role in Model.Rolelist)
                                             {
-                                                <option value="@role.RoleId">@role.RoleName</option>
+                                                if (Model.User.Roleid == role.RoleId)
+                                                {
+                                                    <option value="@role.RoleId" selected>@role.RoleName</option>
+                                                }
+
+                                                else
+                                                {
+                                                    <option value="@role.RoleId">@role.RoleName</option>
+                                                }
+
                                             }
 
 
