--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/AllProducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/AllProducts.cshtml
@@ -10,7 +10,7 @@
         <h1 class="mt-4">Products</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
-            <li class="breadcrumb-item active">Tables</li>
+            <li class="breadcrumb-item active">products</li>
         </ol>
         <div style="margin-bottom:10px">
 
