--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/Createproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/Createproduct.cshtml
@@ -1,4 +1,4 @@
-﻿@model  IEnumerable< MarketPricingSystem.Models.Categories >
+﻿@model  IEnumerable< MarketPricingSystem.Models.Categories>
 @{
     ViewBag.Title = "AddProduct";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
@@ -9,21 +9,23 @@
         <div class="row justify-content-center">
             <div class="col-lg-7">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Update Product</h3></div>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Product</h3></div>
                     <div class="card-body">
 
 
                         <form method="post" action="/Products/Confirmcreate">
-
+                            <h6 style="color:red;opacity:0.5">@TempData["Message1"]  </h6>  <h6 style="color:red;opacity:0.5;margin-left:53%">@TempData["Message2"]  </h6>
                             <div class="row mb-3">
+
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="productname" type="text" name="productname"  required />
+                                        <input class="form-control" id="productname" type="text" name="productname" required />
                                         <label for="productname">Name </label>
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
+
                                     <div class="form-floating">
                                         <input class="form-control" id="Barcode" type="text" name="Barcode" required />
                                         <label for="Barcode">Barcode</label>
@@ -37,7 +39,7 @@
                             </div>
 
 
-
+                            <h6 style="color:red;opacity:0.5;">@TempData["Message3"]  </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -45,10 +47,12 @@
 
                                         <select id="categories" class="form-control" name="Categoryid">
 
-                                           @foreach (var category in Model)
-                                           {
-                                                <option value="@category.CategoryId" >@category.CategoryName</option>
-                                           }
+                                            <option selected disabled>--select--</option>
+
+                                            @foreach (var category in Model)
+                                            {
+                                                <option value="@category.CategoryId">@category.CategoryName</option>
+                                            }
 
 
 
@@ -61,7 +65,7 @@
 
                             </div>
 
-                          
+
 
                             <div class="mt-4 mb-0">
                                 <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
