--- a/MarketPricingSystem/MarketPricingSystem/Views/Roles/Updaterole.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Roles/Updaterole.cshtml
@@ -13,7 +13,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-7">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Add new Role</h3></div>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Update Role</h3></div>
                     <div class="card-body">
 
 
@@ -42,6 +42,7 @@
                                     <div class="col-md-6">
 
                                         <input style=" cursor: pointer;" class="form-check-input" type="checkbox" id="@permission.PermissionName" name="@permission.PermissionName" value="@permission.PermissionId">
+
                                         <label style=" cursor: pointer;" for="@permission.PermissionName"> @permission.PermissionName</label><br>
 
                                     </div>
