--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Createsupermarket.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Createsupermarket.cshtml
@@ -16,7 +16,7 @@
 
 
                         <form method="post" action="/Supermarket/ConfirmCreate">
-
+                            <h6 style="color: red; margin-left: 24%; opacity: 0.5">@TempData["Message1"]  </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
@@ -39,7 +39,7 @@
                             </div>
 
 
-
+                            <h6 style="color: red; opacity: 0.5">@TempData["Message2"]  </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
@@ -53,7 +53,7 @@
 
 
                             <div class="mt-4 mb-0">
-                                <div class="d-grid"> <button type="submit" class="btn btn-primary" > Add</button> </div>
+                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
                             </div>
                         </form>
 
