--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Updatesupermarket.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Updatesupermarket.cshtml
@@ -14,38 +14,38 @@
 
 
                         <form method="post" action="/Supermarket/Confirmupdate">
-
+                            <h6 style="color:red;margin-left:24%;opacity:0.5">@TempData["Message1"]  </h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="supermarketname" type="text"  name="MarketName" value="@Model.SupermarketName" required/>
+                                        <input class="form-control" id="supermarketname" type="text" name="MarketName" value="@Model.SupermarketName" required />
                                         <label for="supermarketname">Name </label>
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input class="form-control" id="supermarketRegion" type="text"  name="MarketRegion" value="@Model.SupermarketRegion" required/>
+                                        <input class="form-control" id="supermarketRegion" type="text" name="MarketRegion" value="@Model.SupermarketRegion" required />
                                         <label for="supermarketRegion">Region</label>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="supermarketDescription" type="text"  name="MarketDescription" value="@Model.SupermarketDescription" required/>
+                                <input class="form-control" id="supermarketDescription" type="text" name="MarketDescription" value="@Model.SupermarketDescription" required />
                                 <label for="supermarketDescription">Description</label>
                             </div>
 
 
-
+                            <h6 style="color:red;opacity:0.5">@TempData["Message2"]</h6>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber"  value="@Model.Phonenumber" required/>
+                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" value="@Model.Phonenumber" required />
                                         <label for="phonenumber">Phone number</label>
                                     </div>
                                 </div>
-                                
+
                             </div>
 
                             <input type="hidden" value="@Model.SupermarketId" name="Supermarketid" />
