--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Allsupermarkets.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarketproducts/Allsupermarkets.cshtml
@@ -10,7 +10,7 @@
         <h1 class="mt-4">Super Markets</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
-            <li class="breadcrumb-item active">Tables</li>
+            <li class="breadcrumb-item active">supermarkets</li>
         </ol>
         <div style="margin-bottom:10px">
 
