All cdns downloaded

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Options.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Options.cshtml
@@ -11,7 +11,7 @@
         <a href="/Home/Allproducts">
             <h2>Best Product Price</h2>
             <p>Lowest Product Price Here !</p>
-            <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
+            <img src="~/Images/magnifier.svg" alt="">
             </a>
     </div>
 
@@ -21,7 +21,7 @@
         <a href="/Home/SuperMarketList">
             <h2>SuperMarket</h2>
             <p>search for supermarkets and products !</p>
-            <img src="https://assets.codepen.io/2301174/icon-team-builder.svg" alt="">
+            <img src="~/Images/icon-team-builder.svg" alt="">
         </a>
     </div>
 
@@ -29,14 +29,14 @@
     <div class="boxx boxx-down blue">
         <h2>Track</h2>
         <p>Track how product price changes in a superMarket</p>
-        <img src="https://assets.codepen.io/2301174/icon-calculator.svg" alt="">
+        <img src="~/Images/icon-calculator.svg" alt="">
     </div>
 </div>
 <div class="row2-cont">
     <div class="boxx orange">
         <h2>Events</h2>
         <p>Events, sales, vouchers !</p>
-        <img src="https://assets.codepen.io/2301174/icon-karma.svg" alt="">
+        <img src="~/Images/icon-karma.svg" alt="">
     </div>
 </div>
 
