--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
@@ -57,9 +57,9 @@
 
             <div class="box">
                 <h3>contact info</h3>
-                <a href="#"> <i class="fas fa-phone"></i> +71548165 </a>
+                <a href="#"> <i class="fas fa-phone"></i> +71544112 </a>
                 
-                <a href="#"> <i class="fas fa-envelope"></i> aha057@usal.edu.com </a>
+                <a href="#"> <i class="fas fa-envelope"></i> admin@usal.edu.com </a>
                 
                 <a href="#"> <i class="fas fa-map-marker-alt"></i> lebanon, beirut,909090 </a>
             </div>
