--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Allproducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Allproducts.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MarketPricingSystem.ViewModel.product>
 @{
 
-    
+
     ViewBag.Title = "BestPrice";
 }
 
@@ -11,59 +11,61 @@
 
 
 
-    <table id="supermarket" class="table table-striped table-bordered" style="width:100% ;">
-        <thead>
+<table id="products" class="table table-striped table-bordered" style="width:100% ;">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Bar code</th>
+            <th>Description</th>
+            <th>Category</th>
+            <th>Cheap price</th>
+            <th>Expensive price</th>
+
+
+
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var market in Model)
+        {
+
             <tr>
-                <th>Name</th>
-                <th>Bar code</th>
-                <th>Description</th>
-                <th>Category</th>
-                <th>Cheap price</th>
-                <th>Expensive price</th>
 
-               
+                <td>@market.productname</td>
+                <td>@market.productBarcode</td>
+                <td>@market.productDescription</td>
+                <td>@market.productcategory</td>
 
+
+
+                <td>@Html.ActionLink("Cheapest price", "GetCheapestproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
+                <td>@Html.ActionLink("Expensive price", "GetExpensiveproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var market in Model)
-            {
+        }
+    </tbody>
+</table>
 
-                <tr>
-           
-                    <td>@market.productname</td>
-                    <td>@market.productBarcode</td>
-                    <td>@market.productDescription</td>
-                    <td>@market.productcategory</td>
-                 
-
-
-                    <td>@Html.ActionLink("Cheapest price", "GetCheapestproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
-                    <td>@Html.ActionLink("Expensive price", "GetExpensiveproduct", "Home", new { id = market.productid }, new { @class = "btn btn-primary" })</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-
-    <div style="margin-bottom:200px">
-        <span></span>
-    </div>
+<div style="margin-bottom:200px">
+    <span></span>
+</div>
 
 
 @section Styles {
 
-    <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/HomedataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/homedatatables.css" rel="stylesheet" type="text/css" />
 }
 
 @section scripts
 {
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/Scripts/Homejquery-3.5.1.js"></script>
+    <script src="~/Scripts/Homejquery.dataTables.min.js"></script>
+    <script src="~/Scripts/HomedataTables.bootstrap4.min.js"></script>
+
 
     <script>
         $(document).ready(function () {
-            $('#supermarket').DataTable();
+            $('#products').DataTable();
         });
 
 
