--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/GetCheapestproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/GetCheapestproduct.cshtml
@@ -25,7 +25,7 @@
                     <div class="card-front">
                         <figure>
                             <div class="img-bg"></div>
-                            <img src="https://previews.123rf.com/images/belchonock/belchonock1909/belchonock190922769/130625992-shopping-basket-and-grocery-products-on-white-background.jpg" alt="@cheapproduct.supermarketname">
+                            <img src="~/Images/productvalue.jpg" alt="@cheapproduct.supermarketname">
                             <figcaption>@cheapproduct.supermarketname</figcaption>
                         </figure>
 
@@ -39,7 +39,7 @@
                     <div class="card-back">
                         <figure>
                             <div class="img-bg"></div>
-                            <img src="https://media.istockphoto.com/photos/shopping-basket-full-of-variety-of-grocery-products-food-and-drink-on-picture-id1319625327?k=20&m=1319625327&s=170667a&w=0&h=AYFnDNYVTbHZoqClA5FrXALLQiozJkb12E2toFNvA04=" alt="Brohm Lake">
+                            <img src="~/Images/productvalue2.jpg" alt="Brohm Lake">
                         </figure>
 
                         <button style="cursor:text">@cheapproduct.productprice <span style="margin-left:10px">LB</span></button>
