--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
@@ -6,54 +6,56 @@
 
 
 
-    <table id="example" class="table table-striped table-bordered" style="width:100% ;">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Barcode</th>
-                <th>Description</th>
-                <th>price</th>
-                <th>category</th>
-              
-               
-             
+<table id="example" class="table table-striped table-bordered" style="width:100% ;">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Barcode</th>
+            <th>Description</th>
+            <th>price</th>
+            <th>category</th>
 
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var market in Model)
-            {
-               
+
+
+
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var market in Model)
+        {
+
             <tr>
                 <td>@market.productname</td>
                 <td>@market.productBarcode</td>
                 <td>@market.productDescription</td>
                 <td>@market.productprice <span style="margin-left:10px">LB</span></td>
                 <td>@market.productcategory</td>
-             
-              
 
-              
+
+
+
             </tr>
         }
-        </tbody>
-    </table>
+    </tbody>
+</table>
 
-    <div style="margin-bottom:200px">
-        <span></span>
-    </div>
+<div style="margin-bottom:200px">
+    <span></span>
+</div>
 
 
 @section Styles {
- 
-   <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+
+    <link href="~/Content/HomedataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/homedatatables.css" rel="stylesheet" type="text/css" />
 }
 
 @section scripts
 {
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/Scripts/Homejquery-3.5.1.js"></script>
+    <script src="~/Scripts/Homejquery.dataTables.min.js"></script>
+    <script src="~/Scripts/HomedataTables.bootstrap4.min.js"></script>
+
 
     <script>
         $(document).ready(function () {
