--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
@@ -8,49 +8,51 @@
 
 
 
-    <table id="supermarket" class="table table-striped table-bordered" style="width:100% ;">
-        <thead>
-            <tr>
-                <th>Market Name</th>
-                <th>Market Region</th>
-                <th>Description</th>
-                <th>phone number</th>
-                <th>products</th>
+<table id="supermarket" class="table table-striped table-bordered" style="width:100% ;">
+    <thead>
+        <tr>
+            <th>Market Name</th>
+            <th>Market Region</th>
+            <th>Description</th>
+            <th>phone number</th>
+            <th>products</th>
 
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var market in Model)
-            {
-               
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var market in Model)
+        {
+
             <tr>
                 <td>@market.SupermarketName</td>
                 <td>@market.SupermarketRegion</td>
                 <td>@market.SupermarketDescription</td>
                 <td>@market.Phonenumber</td>
-              
+
 
                 <td>@Html.ActionLink("products", "ProductList", "Home", new { id = market.SupermarketId }, new { @class = "btn btn-primary" })</td>
             </tr>
         }
-        </tbody>
-    </table>
+    </tbody>
+</table>
 
-    <div style="margin-bottom:200px">
-        <span></span>
-    </div>
+<div style="margin-bottom:200px">
+    <span></span>
+</div>
 
 
 @section Styles {
- 
-   <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+
+    <link href="~/Content/HomedataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/homedatatables.css" rel="stylesheet" type="text/css" />
 }
 
 @section scripts
 {
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/Scripts/Homejquery-3.5.1.js"></script>
+    <script src="~/Scripts/Homejquery.dataTables.min.js"></script>
+    <script src="~/Scripts/HomedataTables.bootstrap4.min.js"></script>
+
 
     <script>
         $(document).ready(function () {
