--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/AllProducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/AllProducts.cshtml
@@ -81,7 +81,7 @@
 
 @section scripts {
 
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="~/Scripts/sweetalert2@11.js"></script>
 
     <script>
         function confirm(event) {
