--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg" href="~/Images/icon.svg" sizes="32x32">
 
     <title>Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+    <link href="~/Content/Dtablestyle.css" rel="stylesheet" />
     <link href="~/Content/user.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     
@@ -146,12 +146,12 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="~/Scripts/userlayoutbootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="~/Scripts//usersdatatables.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-   
+    <script src="~/Scripts/simple-datatables@latest.js" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+
+
     <script src="~/Scripts/users.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
