--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Allsupermarkets.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Allsupermarkets.cshtml
@@ -80,7 +80,7 @@
 
 @section scripts {
 
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="~/Scripts/sweetalert2@11.js"></script>
 
     <script>
         function confirm(event) {
